@@ -11,6 +11,7 @@ Searches     : Improvements of duplicate/fuzzy/sketch searches to permit sorting
 AlbumGUI     : Improvements of grouped images to apply renaming, copying or metadata actions to all images.
 General      : Update internal Libraw to last 0.18-beta2. New camera supported : Olympus E-M1-II, Panasonic FZ2000 and FZ2500, Sony A99-II, Sony a6500.
 General      : Media player is now ported to QtAV instead Qt5Multimedia (http://www.qtav.org/).
+General      : Add support of animated GIF in preview mode.
 SlideShow    : Add video support.
 Presentation : Add video support.
 
@@ -160,4 +161,4 @@ BUGFIXES FROM BUGZILLA:
 142 ==> 354867 - digikam crashes while renaming files.
 143 ==> 150076 - playing music during a slideshow.
 144 ==> 374135 - Storage capacity shows lower unit than actual capacity.
-145 ==> 
+145 ==> 203710 - Play animated GIF files in preview mode.
